// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CountryRank DE 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Image
    source={
      Object {
        "uri": "https://osu.ppy.sh/images/flags/DE.png",
      }
    }
    style={
      Object {
        "height": 30,
        "width": 50,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
     Rank:
  </Text>
</View>
`;

exports[`Storyshots CountryRank FR 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Image
    source={
      Object {
        "uri": "https://osu.ppy.sh/images/flags/FR.png",
      }
    }
    style={
      Object {
        "height": 30,
        "width": 50,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
     Rank:
  </Text>
</View>
`;

exports[`Storyshots CountryRank US 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Image
    source={
      Object {
        "uri": "https://osu.ppy.sh/images/flags/US.png",
      }
    }
    style={
      Object {
        "height": 30,
        "width": 50,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
     Rank:
  </Text>
</View>
`;

exports[`Storyshots ScoreBadge A 1`] = `
<Image
  source={
    Object {
      "uri": "https://osu.ppy.sh/images/badges/score-ranks-v2/A.png",
    }
  }
  style={
    Object {
      "height": 25,
      "width": 50,
    }
  }
/>
`;

exports[`Storyshots ScoreBadge S 1`] = `
<Image
  source={
    Object {
      "uri": "https://osu.ppy.sh/images/badges/score-ranks-v2/S.png",
    }
  }
  style={
    Object {
      "height": 25,
      "width": 50,
    }
  }
/>
`;

exports[`Storyshots ScoreBadge SS 1`] = `
<Image
  source={
    Object {
      "uri": "https://osu.ppy.sh/images/badges/score-ranks-v2/SS.png",
    }
  }
  style={
    Object {
      "height": 25,
      "width": 50,
    }
  }
/>
`;
